# roms-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: format.yml  lint.yml  security_scan.yml  test.yml
src/: cli.py  config.py  db.py  display.py  downloader.py  library.py  mapping.py  metadata_manager.py  repl.py  scraping.py  search.py  settings_screen.py  utils.py
tests/: test_db.py  test_display.py  test_downloader.py  test_library.py  test_metadata_manager.py  test_repl.py  test_search.py  test_utils.py
